Blender cursor gets stuck in the timeline when scrubbing (jack transport) #22284

Closed
opened 2010-05-08 00:45:33 +02:00 by Juan Pablo Bouza · 5 comments

%%%If you work with jack as the audio system, the timeline cursor sometimes gets stuck when scrubbing frame by frame.

My guess is that there is some kind of numerical imprecision in certain frames, and blender can't match with jack transport. %%%

%%%If you work with jack as the audio system, the timeline cursor sometimes gets stuck when scrubbing frame by frame. My guess is that there is some kind of numerical imprecision in certain frames, and blender can't match with jack transport. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Can explain that a little more detailed? Maybe with instructions on how to reproduce this? How does the cursor get stuck? Cannot you move it again after it got stuck or what exactly happens?

Your guess is wrong, as there are much more audio samples per second than video frames, the imprecision (if there is one) is on the frame side, but as jack is working sample-wise, all frames in blender get covered by multiple samples.%%%

%%%Can explain that a little more detailed? Maybe with instructions on how to reproduce this? How does the cursor get stuck? Cannot you move it again after it got stuck or what exactly happens? Your guess is wrong, as there are much more audio samples per second than video frames, the imprecision (if there is one) is on the frame side, but as jack is working sample-wise, all frames in blender get covered by multiple samples.%%%
Author
Member

%%%Hi Joerg!

Well, it's very simple, just enable jack as the audio system, and you will not be able to scroll the timeline forwards frame by frame by pressing the right arrow key.

A friend of mine also found the same issue in his computer.

You've done a great work!! You don't know how useful the jack transport support is!!! :D%%%

%%%Hi Joerg! Well, it's very simple, just enable jack as the audio system, and you will not be able to scroll the timeline forwards frame by frame by pressing the right arrow key. A friend of mine also found the same issue in his computer. You've done a great work!! You don't know how useful the jack transport support is!!! :D%%%
Member

%%%I have fixed this in my GSoC branch, will commit it to trunk soon.%%%

%%%I have fixed this in my GSoC branch, will commit it to trunk soon.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#22284
No description provided.