Bugfix for [#22284] Blender cursor gets stuck in the timeline when scrubbing (jack transport).